# ca_finder

./: README.md  docker_cmd.sh  pyproject.toml
ca_finder/: ca_finder.py
ca_finder/database/: create_embeddings.py  load_data.py
ca_finder/database/queries/: vector_similarity_tweet_search.sql
tests/: test_ca_finder.py
